@@ -80,6 +80,7 @@
     <i>Set resource</i> will generate code to set the currently selected Resource as the beat sound effect for
     future calls to <i>start</i>. If no <i>Sound</i> type resource is selected,
     checking the checkbox will generate code to reset the sound to the default one.<br>
+    To mute or unmute the metronome, the <i>Mute</i> checkbox can be checked or unchecked.<br>
       <ul>
         <li><b>Generated code example for <i>Set resource</i>:</b> metronome.setBeatResource("thing"); // valid resource selected</li>
         <li><b>Generated code example for <i>Set resource</i>:</b> metronome.setBeatResource(null); // invalid or no resource selected</li>
