@@ -271,6 +271,14 @@
         metronome.setBeatResource(null);<br>
         <br></li>
 
+        <li><b>setMuted ( boolean ):</b><br>
+        This function is used to mute beat. When muted, the metronome will simply display visuals
+        without playing a sound.<br>
+        <i>Example Usage:</i><br>
+        metronome.setMuted(true);<br>
+        metronome.setMuted(false);<br>
+        <br></li>
+
         <li><b>setPattern ( real[] ):</b><br>
         This function is used to set the pattern of the beat. This pattern will repeat until
         the metronome is playing and will determine, how the intervals between beats are streched.
