@@ -284,21 +284,21 @@
              <property name="spacing">
               <number>10</number>
              </property>
-             <item row="0" column="1" colspan="2">
+             <item row="1" column="1" colspan="2">
               <widget class="QLineEdit" name="pResourceLineEdit">
                <property name="enabled">
                 <bool>false</bool>
                </property>
               </widget>
              </item>
-             <item row="0" column="0">
+             <item row="1" column="0">
               <widget class="QCheckBox" name="pSetBeatSoundCheckBox">
                <property name="text">
                 <string>Set resource</string>
                </property>
               </widget>
              </item>
-             <item row="0" column="3">
+             <item row="1" column="3">
               <widget class="QPushButton" name="CloseButton">
                <property name="minimumSize">
                 <size>
@@ -317,6 +317,13 @@
                </property>
                <property name="text">
                 <string/>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="0" colspan="4">
+              <widget class="QCheckBox" name="pMuteCheckBox">
+               <property name="text">
+                <string>Mute</string>
                </property>
               </widget>
              </item>
